[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/fleet/tsconfig.json
+++ b/x-pack/plugins/fleet/tsconfig.json
@@ -109,5 +109,6 @@
     "@kbn/react-kibana-mount",
     "@kbn/react-kibana-context-render",
     "@kbn/test-jest-helpers",
+    "@kbn/core-saved-objects-utils-server",
   ]
 }
