--- a/config/serverless.yml
+++ b/config/serverless.yml
@@ -104,6 +104,9 @@ elasticsearch.ignoreVersionMismatch: true
 # Limit maxSockets to 800 as we do in ESS, which improves reliability under high loads.
 elasticsearch.maxSockets: 800
 
+# Hold the DNS lookup resolution for 60s max (if the DNS server claims a shorter TTL, it'll be used instead)
+elasticsearch.dnsCacheTtlInSeconds: 60
+
 # Enable dynamic config to be updated via the internal HTTP requests
 coreApp.allowDynamicConfigOverrides: true
 
