[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/integration_assistant/tsconfig.json
+++ b/x-pack/plugins/integration_assistant/tsconfig.json
@@ -16,6 +16,7 @@
     "@kbn/config-schema",
     "@kbn/langchain",
     "@kbn/core-elasticsearch-server",
-    "@kbn/actions-plugin"
+    "@kbn/actions-plugin",
+    "@kbn/data-plugin"
   ]
 }
