--- a/x-pack/plugins/fleet/common/openapi/bundled.yaml
+++ b/x-pack/plugins/fleet/common/openapi/bundled.yaml
@@ -5296,6 +5296,14 @@ components:
           type: string
           description: Agent policy ID where that package policy will be added
           example: agent-policy-id
+          deprecated: true
+        policy_ids:
+          type: array
+          items:
+            type: string
+          description: Agent policy IDs where that package policy will be added
+          example:
+            - agent-policy-id
         package:
           type: object
           properties:
@@ -5377,7 +5385,6 @@ components:
             the agent policy is managed.
       required:
         - name
-        - policy_id
         - package
     upgrade_diff:
       title: Package policy Upgrade dryrun
