--- a/x-pack/plugins/observability_solution/slo/docs/openapi/slo/bundled.yaml
+++ b/x-pack/plugins/observability_solution/slo/docs/openapi/slo/bundled.yaml
@@ -667,6 +667,8 @@ components:
           type: object
         value:
           type: string
+        field:
+          type: string
     filter:
       title: Filter
       description: Defines properties for a filter
