:alembic: Initial commit

--- a/x-pack/plugins/lens/kibana.jsonc
+++ b/x-pack/plugins/lens/kibana.jsonc
@@ -41,6 +41,7 @@
       "expressionLegacyMetricVis",
       "expressionPartitionVis",
       "usageCollection",
+      "embeddableEnhanced",
       "taskManager",
       "globalSearch",
       "savedObjectsTagging",
