Add browser-side example

--- a/examples/dependency_injection_example/kibana.jsonc
+++ b/examples/dependency_injection_example/kibana.jsonc
@@ -6,7 +6,7 @@
   "plugin": {
     "id": "dependencyInjectionExample",
     "server": true,
-    "browser": false,
+    "browser": true,
     "requiredPlugins": ["developerExamples"]
   }
 }
