--- a/package.json
+++ b/package.json
@@ -1153,6 +1153,7 @@
     "@opentelemetry/otlp-exporter-base": "^0.203.0",
     "@opentelemetry/semantic-conventions": "^1.36.0",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@redtea/react-inversify": "^1.0.1",
     "@reduxjs/toolkit": "1.9.7",
     "@slack/webhook": "^7.0.1",
     "@smithy/eventstream-codec": "^4.0.1",
