--- a/renovate.json
+++ b/renovate.json
@@ -903,6 +903,7 @@
         "reflect-metadata",
         "type-detect",
         "utility-types",
+        "@redtea/react-inversify",
         "@types/fetch-mock",
         "@types/getos",
         "@types/json5",
