[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/observability_solution/asset_manager/tsconfig.json
+++ b/x-pack/plugins/observability_solution/asset_manager/tsconfig.json
@@ -32,6 +32,7 @@
     "@kbn/zod-helpers",
     "@kbn/security-plugin",
     "@kbn/encrypted-saved-objects-plugin",
-    "@kbn/spaces-plugin"
+    "@kbn/spaces-plugin",
+    "@kbn/assetManager-plugin"
   ]
 }
