--- a/package.json
+++ b/package.json
@@ -935,10 +935,10 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@reduxjs/toolkit": "1.9.7",
     "@slack/webhook": "^7.0.1",
-    "@smithy/eventstream-codec": "^2.0.12",
-    "@smithy/eventstream-serde-node": "^2.1.1",
-    "@smithy/types": "^2.9.1",
-    "@smithy/util-utf8": "^2.0.0",
+    "@smithy/eventstream-codec": "^3.0.0",
+    "@smithy/eventstream-serde-node": "3.0.0",
+    "@smithy/types": "^3.0.0",
+    "@smithy/util-utf8": "^3.0.0",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.12",
     "@turf/along": "6.0.1",
