--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1006,6 +1006,8 @@
       "@kbn/interactive-setup-test-endpoints-plugin/*": ["test/interactive_setup_api_integration/plugins/test_endpoints/*"],
       "@kbn/interpreter": ["packages/kbn-interpreter"],
       "@kbn/interpreter/*": ["packages/kbn-interpreter/*"],
+      "@kbn/investigate-plugin": ["x-pack/plugins/observability_solution/investigate"],
+      "@kbn/investigate-plugin/*": ["x-pack/plugins/observability_solution/investigate/*"],
       "@kbn/io-ts-utils": ["packages/kbn-io-ts-utils"],
       "@kbn/io-ts-utils/*": ["packages/kbn-io-ts-utils/*"],
       "@kbn/ipynb": ["packages/kbn-ipynb"],
