--- a/packages/kbn-unified-doc-viewer/tsconfig.json
+++ b/packages/kbn-unified-doc-viewer/tsconfig.json
@@ -25,5 +25,8 @@
     "@kbn/react-field",
     "@kbn/field-utils",
     "@kbn/expressions-plugin",
+    "@kbn/unified-data-table",
+    "@kbn/unified-doc-viewer-plugin",
+    "@kbn/core-notifications-browser",
   ]
 }
