--- a/src/plugins/esql_datagrid/tsconfig.json
+++ b/src/plugins/esql_datagrid/tsconfig.json
@@ -22,10 +22,10 @@
     "@kbn/core",
     "@kbn/ui-actions-plugin",
     "@kbn/field-formats-plugin",
-    "@kbn/i18n",
     "@kbn/unified-doc-viewer-plugin",
     "@kbn/core-notifications-browser",
-    "@kbn/shared-ux-utility"
+    "@kbn/shared-ux-utility",
+    "@kbn/unified-doc-viewer"
   ],
   "exclude": [
     "target/**/*",
