Restore working legacy tsvb editors

--- a/src/plugins/visualizations/kibana.jsonc
+++ b/src/plugins/visualizations/kibana.jsonc
@@ -36,7 +36,14 @@
       "serverless",
       "noDataPage"
     ],
-    "requiredBundles": ["kibanaUtils", "kibanaReact", "charts", "savedObjects", "visDefaultEditor"],
+    "requiredBundles": [
+      "kibanaUtils",
+      "kibanaReact",
+      "charts",
+      "savedObjects",
+      "visDefaultEditor",
+      "visTypeTimeseries"
+    ],
     "extraPublicDirs": [
       "common/constants",
       "common/utils",
