--- a/package.json
+++ b/package.json
@@ -690,6 +690,7 @@
     "@kbn/resizable-layout": "link:packages/kbn-resizable-layout",
     "@kbn/resizable-layout-examples-plugin": "link:examples/resizable_layout_examples",
     "@kbn/resolver-test-plugin": "link:x-pack/test/plugin_functional/plugins/resolver_test",
+    "@kbn/response-ops-feature-flags": "link:packages/response-ops/feature_flags",
     "@kbn/response-stream-plugin": "link:examples/response_stream",
     "@kbn/rison": "link:packages/kbn-rison",
     "@kbn/rollup-plugin": "link:x-pack/plugins/rollup",
