--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1354,6 +1354,8 @@
       "@kbn/resizable-layout-examples-plugin/*": ["examples/resizable_layout_examples/*"],
       "@kbn/resolver-test-plugin": ["x-pack/test/plugin_functional/plugins/resolver_test"],
       "@kbn/resolver-test-plugin/*": ["x-pack/test/plugin_functional/plugins/resolver_test/*"],
+      "@kbn/response-ops-feature-flags": ["packages/response-ops/feature_flags"],
+      "@kbn/response-ops-feature-flags/*": ["packages/response-ops/feature_flags/*"],
       "@kbn/response-stream-plugin": ["examples/response_stream"],
       "@kbn/response-stream-plugin/*": ["examples/response_stream/*"],
       "@kbn/rison": ["packages/kbn-rison"],
