--- a/package.json
+++ b/package.json
@@ -543,6 +543,7 @@
     "@kbn/interactive-setup-plugin": "link:src/plugins/interactive_setup",
     "@kbn/interactive-setup-test-endpoints-plugin": "link:test/interactive_setup_api_integration/plugins/test_endpoints",
     "@kbn/interpreter": "link:packages/kbn-interpreter",
+    "@kbn/investigate-plugin": "link:x-pack/plugins/observability_solution/investigate",
     "@kbn/io-ts-utils": "link:packages/kbn-io-ts-utils",
     "@kbn/ipynb": "link:packages/kbn-ipynb",
     "@kbn/kbn-health-gateway-status-plugin": "link:test/health_gateway/plugins/status",
