--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "@formatjs/intl-pluralrules": "^5.2.12",
     "@formatjs/intl-relativetimeformat": "^11.2.12",
     "@formatjs/intl-utils": "^3.8.4",
+    "@formatjs/ts-transformer": "^3.13.14",
     "@grpc/grpc-js": "^1.6.8",
     "@hapi/accept": "^5.0.2",
     "@hapi/boom": "^9.1.4",
