--- a/x-pack/plugins/fleet/common/openapi/bundled.yaml
+++ b/x-pack/plugins/fleet/common/openapi/bundled.yaml
@@ -26,12 +26,13 @@ paths:
               schema:
                 type: object
                 properties:
-                  name:
-                    type: string
                   status:
+                    type: string
+                  id:
                     type: string
                   host:
                     type: string
+                    deprecated: true
         '400':
           $ref: '#/components/responses/error'
       operationId: fleet-server-health-check
@@ -44,8 +45,13 @@ paths:
             schema:
               type: object
               properties:
+                id:
+                  type: string
                 host:
                   type: string
+                  deprecated: true
+            required:
+              - id
   /setup:
     post:
       summary: Initiate Fleet setup
