--- a/x-pack/plugins/spaces/tsconfig.json
+++ b/x-pack/plugins/spaces/tsconfig.json
@@ -36,6 +36,8 @@
     "@kbn/react-kibana-context-render",
     "@kbn/utility-types-jest",
     "@kbn/security-plugin-types-public",
+    "@kbn/security-plugin-types-common",
+    "@kbn/core-application-browser",
   ],
   "exclude": [
     "target/**/*",
