--- a/x-pack/plugins/data_visualizer/tsconfig.json
+++ b/x-pack/plugins/data_visualizer/tsconfig.json
@@ -82,7 +82,11 @@
     "@kbn/presentation-publishing",
     "@kbn/shared-ux-utility",
     "@kbn/search-types",
-    "@kbn/unified-field-list"
+    "@kbn/unified-field-list",
+    "@kbn/content-management-utils",
+    "@kbn/core-lifecycle-browser",
+    "@kbn/presentation-containers",
+    "@kbn/react-kibana-mount"
   ],
   "exclude": [
     "target/**/*",
