--- a/x-pack/plugins/security_solution/kibana.jsonc
+++ b/x-pack/plugins/security_solution/kibana.jsonc
@@ -53,7 +53,8 @@
       "notifications",
       "savedSearch",
       "unifiedDocViewer",
-      "charts"
+      "charts",
+      "observabilityAIAssistantApp"
     ],
     "optionalPlugins": [
       "cloudExperiments",
