--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "analytics",
     "visualizations",
     "dashboards",
-    "dashboarding"
+    "dashboarding",
+"test"
   ],
   "private": true,
   "version": "8.15.0",
