[Logs] Use central log sources setting for logs context resolution in Discover (#192605)
## Summary

Closes https://github.com/elastic/logs-dev/issues/171.

Most of the noise in the PR is from making methods async and amending
test mocks, the core logic changes are in `createLogsContextService`.

(cherry picked from commit a87e7e8e6393f8ca5e3f9772d6c8b458229984ef)

# Conflicts:
#	src/plugins/discover/tsconfig.json

--- a/src/plugins/discover/tsconfig.json
+++ b/src/plugins/discover/tsconfig.json
@@ -98,6 +98,7 @@
     "@kbn/security-solution-common",
     "@kbn/router-utils",
     "@kbn/management-settings-ids",
+    "@kbn/logs-data-access-plugin"
   ],
   "exclude": [
     "target/**/*"
