Display entities in global search bar

--- a/x-pack/plugins/observability_solution/inventory/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/inventory/kibana.jsonc
@@ -18,7 +18,8 @@
       "datasetQuality",
       "share",
       "alerting",
-      "ruleRegistry"
+      "ruleRegistry",
+      "globalSearch"
     ],
     "requiredBundles": [
       "kibanaReact",
