move field stats flyout to package

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1212,6 +1212,8 @@
       "@kbn/ml-date-utils/*": ["x-pack/packages/ml/date_utils/*"],
       "@kbn/ml-error-utils": ["x-pack/packages/ml/error_utils"],
       "@kbn/ml-error-utils/*": ["x-pack/packages/ml/error_utils/*"],
+      "@kbn/ml-field-stats-flyout": ["x-pack/packages/ml/field_stats_flyout"],
+      "@kbn/ml-field-stats-flyout/*": ["x-pack/packages/ml/field_stats_flyout/*"],
       "@kbn/ml-in-memory-table": ["x-pack/packages/ml/in_memory_table"],
       "@kbn/ml-in-memory-table/*": ["x-pack/packages/ml/in_memory_table/*"],
       "@kbn/ml-is-defined": ["x-pack/packages/ml/is_defined"],
