--- a/x-pack/plugins/ml/tsconfig.json
+++ b/x-pack/plugins/ml/tsconfig.json
@@ -70,7 +70,6 @@
     "@kbn/ml-trained-models-utils",
     "@kbn/ml-url-state",
     "@kbn/monaco",
-    "@kbn/react-field",
     "@kbn/rison",
     "@kbn/saved-objects-finder-plugin",
     "@kbn/saved-objects-management-plugin",
@@ -130,6 +129,7 @@
     "@kbn/esql-utils",
     "@kbn/core-lifecycle-browser",
     "@kbn/observability-ai-assistant-plugin",
-    "@kbn/json-schemas"
+    "@kbn/json-schemas",
+    "@kbn/ml-field-stats-flyout"
   ]
 }
