--- a/x-pack/plugins/transform/tsconfig.json
+++ b/x-pack/plugins/transform/tsconfig.json
@@ -78,7 +78,8 @@
     "@kbn/core-elasticsearch-server-mocks",
     "@kbn/test-jest-helpers",
     "@kbn/monaco",
-    "@kbn/json-schemas"
+    "@kbn/json-schemas",
+    "@kbn/ml-field-stats-flyout"
   ],
   "exclude": [
     "target/**/*",
