--- a/oas_docs/output/kibana.serverless.staging.yaml
+++ b/oas_docs/output/kibana.serverless.staging.yaml
@@ -5404,7 +5404,7 @@ paths:
         - APM annotations
   /api/asset_criticality:
     delete:
-      description: Delete the asset criticality record for a specific asset if it exists.
+      description: Delete the asset criticality record for a specific entity.
       operationId: DeleteAssetCriticalityRecord
       parameters:
         - description: The ID value of the asset.
@@ -5450,11 +5450,11 @@ paths:
           description: Successful response
         '400':
           description: Invalid request
-      summary: Delete Criticality Record
+      summary: Delete an asset criticality record
       tags:
         - Security Solution Entity Analytics API
     get:
-      description: Get the criticality record for a specific asset.
+      description: Get the asset criticality record for a specific entity.
       operationId: GetAssetCriticalityRecord
       parameters:
         - description: The ID value of the asset.
@@ -5483,11 +5483,17 @@ paths:
           description: Invalid request
         '404':
           description: Criticality record not found
-      summary: Get Criticality Record
+      summary: Get an asset criticality record
       tags:
         - Security Solution Entity Analytics API
     post:
-      description: Create or update a criticality record for a specific asset.
+      description: >
+        Create or update an asset criticality record for a specific entity.
+
+
+        If a record already exists for the specified entity, that record is
+        overwritten with the specified value. If a record doesn't exist for the
+        specified entity, a new record is created.
       operationId: CreateAssetCriticalityRecord
       requestBody:
         content:
@@ -5516,14 +5522,19 @@ paths:
           description: Successful response
         '400':
           description: Invalid request
-      summary: Upsert Criticality Record
+      summary: Upsert an asset criticality record
       tags:
         - Security Solution Entity Analytics API
   /api/asset_criticality/bulk:
     post:
-      description: >-
-        Bulk upsert up to 1000 asset criticality records, creating or updating
-        them as needed.
+      description: >
+        Bulk upsert up to 1000 asset criticality records.
+
+
+        If asset criticality records already exist for the specified entities,
+        those records are overwritten with the specified values. If asset
+        criticality records don't exist for the specified entities, new records
+        are created.
       operationId: BulkUpsertAssetCriticalityRecords
       requestBody:
         content:
@@ -5577,7 +5588,7 @@ paths:
           description: Bulk upload successful
         '413':
           description: File too large
-      summary: Bulk Upsert Asset Criticality Records
+      summary: Bulk upsert asset criticality records
       tags:
         - Security Solution Entity Analytics API
   /api/asset_criticality/list:
@@ -5654,7 +5665,7 @@ paths:
                   - per_page
                   - total
           description: Bulk upload successful
-      summary: List Asset Criticality Records
+      summary: List asset criticality records
       tags:
         - Security Solution Entity Analytics API
   /api/data_views:
@@ -15598,6 +15609,10 @@ paths:
         - access:securitySolution
   /api/risk_score/engine/schedule_now:
     post:
+      description: >-
+        Schedule the risk scoring engine to run as soon as possible. You can use
+        this to recalculate entity risk scores after updating their asset
+        criticality.
       operationId: ScheduleRiskEngineNow
       requestBody:
         content:
@@ -15624,7 +15639,7 @@ paths:
                 $ref: >-
                   #/components/schemas/Security_Solution_Entity_Analytics_API_RiskEngineScheduleNowErrorResponse
           description: Unexpected error
-      summary: Schedule the risk engine to run as soon as possible
+      summary: Run the risk scoring engine
       tags:
         - Security Solution Entity Analytics API
   /api/saved_objects/_export:
@@ -19968,6 +19983,25 @@ components:
             collection will be disabled
           nullable: true
           type: boolean
+        monitoring_diagnostics:
+          type: object
+          properties:
+            limit:
+              type: object
+              properties:
+                burst:
+                  type: number
+                interval:
+                  type: string
+            uploader:
+              type: object
+              properties:
+                init_dur:
+                  type: string
+                max_dur:
+                  type: string
+                max_retries:
+                  type: number
         monitoring_enabled:
           items:
             enum:
@@ -19975,9 +20009,22 @@ components:
               - logs
             type: string
           type: array
+        monitoring_http:
+          type: object
+          properties:
+            enabled:
+              type: boolean
+            host:
+              type: string
+            port:
+              type: number
+          required:
+            - enabled
         monitoring_output_id:
           nullable: true
           type: string
+        monitoring_pprof_enabled:
+          type: boolean
         name:
           type: string
         namespace:
@@ -20449,6 +20496,63 @@ components:
           type: string
         inputs:
           type: string
+        monitoring:
+          type: object
+          properties:
+            diagnostics:
+              type: object
+              properties:
+                limit:
+                  type: object
+                  properties:
+                    burst:
+                      type: number
+                    interval:
+                      type: string
+                uploader:
+                  type: object
+                  properties:
+                    init_dur:
+                      type: string
+                    max_dur:
+                      type: string
+                    max_retries:
+                      type: number
+            enabled:
+              type: boolean
+            http:
+              type: object
+              properties:
+                enabled:
+                  type: boolean
+                host:
+                  type: string
+                port:
+                  type: number
+              required:
+                - enabled
+            logs:
+              type: boolean
+            metrics:
+              type: boolean
+            namespace:
+              type: string
+            pprof:
+              type: object
+              properties:
+                enabled:
+                  type: boolean
+              required:
+                - enabled
+            traces:
+              type: boolean
+            use_output:
+              type: string
+          required:
+            - enabled
+            - metrics
+            - logs
+            - traces
         output_permissions:
           additionalProperties:
             type: object
