registerKibanaFeature for INVENTORY_SERVER_FEATURE

--- a/x-pack/plugins/observability_solution/inventory/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/inventory/kibana.jsonc
@@ -12,11 +12,10 @@
       "entityManager",
       "inference",
       "dataViews",
-      "share"
+      "share",
+      "features"
     ],
-    "requiredBundles": [
-      "kibanaReact"
-    ],
+    "requiredBundles": ["kibanaReact"],
     "optionalPlugins": [],
     "extraPublicDirs": []
   }
