[CI] Auto-commit changed files from 'node scripts/yarn_deduplicate'

--- a/x-pack/plugins/observability_solution/inventory/tsconfig.json
+++ b/x-pack/plugins/observability_solution/inventory/tsconfig.json
@@ -36,6 +36,7 @@
     "@kbn/i18n-react",
     "@kbn/io-ts-utils",
     "@kbn/core-analytics-browser",
-    "@kbn/core-http-browser"
+    "@kbn/core-http-browser",
+    "@kbn/features-plugin"
   ]
 }
