move parseInterval and validators to packages

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1228,6 +1228,8 @@
       "@kbn/ml-nested-property/*": ["x-pack/packages/ml/nested_property/*"],
       "@kbn/ml-number-utils": ["x-pack/packages/ml/number_utils"],
       "@kbn/ml-number-utils/*": ["x-pack/packages/ml/number_utils/*"],
+      "@kbn/ml-parse-interval": ["x-pack/packages/ml/parse_interval"],
+      "@kbn/ml-parse-interval/*": ["x-pack/packages/ml/parse_interval/*"],
       "@kbn/ml-plugin": ["x-pack/plugins/ml"],
       "@kbn/ml-plugin/*": ["x-pack/plugins/ml/*"],
       "@kbn/ml-query-utils": ["x-pack/packages/ml/query_utils"],
@@ -1250,6 +1252,8 @@
       "@kbn/ml-ui-actions/*": ["x-pack/packages/ml/ui_actions/*"],
       "@kbn/ml-url-state": ["x-pack/packages/ml/url_state"],
       "@kbn/ml-url-state/*": ["x-pack/packages/ml/url_state/*"],
+      "@kbn/ml-validators": ["x-pack/packages/ml/validators"],
+      "@kbn/ml-validators/*": ["x-pack/packages/ml/validators/*"],
       "@kbn/mock-idp-plugin": ["packages/kbn-mock-idp-plugin"],
       "@kbn/mock-idp-plugin/*": ["packages/kbn-mock-idp-plugin/*"],
       "@kbn/mock-idp-utils": ["packages/kbn-mock-idp-utils"],
