--- a/package.json
+++ b/package.json
@@ -652,6 +652,7 @@
     "@kbn/ml-local-storage": "link:x-pack/packages/ml/local_storage",
     "@kbn/ml-nested-property": "link:x-pack/packages/ml/nested_property",
     "@kbn/ml-number-utils": "link:x-pack/packages/ml/number_utils",
+    "@kbn/ml-parse-interval": "link:x-pack/packages/ml/parse_interval",
     "@kbn/ml-plugin": "link:x-pack/plugins/ml",
     "@kbn/ml-query-utils": "link:x-pack/packages/ml/query_utils",
     "@kbn/ml-random-sampler-utils": "link:x-pack/packages/ml/random_sampler_utils",
@@ -663,6 +664,7 @@
     "@kbn/ml-trained-models-utils": "link:x-pack/packages/ml/trained_models_utils",
     "@kbn/ml-ui-actions": "link:x-pack/packages/ml/ui_actions",
     "@kbn/ml-url-state": "link:x-pack/packages/ml/url_state",
+    "@kbn/ml-validators": "link:x-pack/packages/ml/validators",
     "@kbn/monaco": "link:packages/kbn-monaco",
     "@kbn/monitoring-collection-plugin": "link:x-pack/plugins/monitoring_collection",
     "@kbn/monitoring-plugin": "link:x-pack/plugins/monitoring",
