--- a/x-pack/plugins/ml/tsconfig.json
+++ b/x-pack/plugins/ml/tsconfig.json
@@ -37,7 +37,6 @@
     "@kbn/data-plugin",
     "@kbn/data-views-plugin",
     "@kbn/data-visualizer-plugin",
-    "@kbn/datemath",
     "@kbn/embeddable-plugin",
     "@kbn/es-query",
     "@kbn/es-types",
@@ -130,6 +129,8 @@
     "@kbn/core-lifecycle-browser",
     "@kbn/observability-ai-assistant-plugin",
     "@kbn/json-schemas",
-    "@kbn/ml-field-stats-flyout"
+    "@kbn/ml-field-stats-flyout",
+    "@kbn/ml-parse-interval",
+    "@kbn/ml-validators"
   ]
 }
