--- a/x-pack/plugins/transform/tsconfig.json
+++ b/x-pack/plugins/transform/tsconfig.json
@@ -15,7 +15,6 @@
     "@kbn/core",
     "@kbn/features-plugin",
     "@kbn/licensing-plugin",
-    "@kbn/ml-plugin",
     "@kbn/unified-search-plugin",
     "@kbn/data-plugin",
     "@kbn/config-schema",
@@ -79,7 +78,8 @@
     "@kbn/test-jest-helpers",
     "@kbn/monaco",
     "@kbn/json-schemas",
-    "@kbn/ml-field-stats-flyout"
+    "@kbn/ml-field-stats-flyout",
+    "@kbn/ml-validators"
   ],
   "exclude": [
     "target/**/*",
