[CI] Auto-commit changed files from 'node scripts/notice'

--- a/src/plugins/console/tsconfig.json
+++ b/src/plugins/console/tsconfig.json
@@ -33,7 +33,8 @@
     "@kbn/react-kibana-mount",
     "@kbn/ui-theme",
     "@kbn/core-doc-links-browser",
-    "@kbn/shared-ux-router"
+    "@kbn/shared-ux-router",
+    "@kbn/console-plugin"
   ],
   "exclude": [
     "target/**/*",
