Fix PR comments

--- a/x-pack/plugins/search_indices/kibana.jsonc
+++ b/x-pack/plugins/search_indices/kibana.jsonc
@@ -12,12 +12,12 @@
     ],
     "requiredPlugins": [
       "share",
-      "searchApiKeys",
     ],
     "optionalPlugins": [
       "cloud",
       "console",
       "usageCollection",
+      "searchApiKeys"
     ],
     "requiredBundles": [
       "kibanaReact",
