--- a/x-pack/plugins/serverless_search/kibana.jsonc
+++ b/x-pack/plugins/serverless_search/kibana.jsonc
@@ -32,8 +32,7 @@
       "searchHomepage",
       "searchIndices",
       "searchInferenceEndpoints",
-      "usageCollection",
-      "searchApiKeys"
+      "usageCollection"
     ],
     "requiredBundles": [
       "kibanaReact"
